--- a/app/globals.css
+++ b/app/globals.css
@@ -24,4 +24,11 @@ body {
       rgb(var(--background-end-rgb))
     )
     rgb(var(--background-start-rgb));
+  width: 100%;
+  height: 100%;
+}
+
+.container,
+.container > * {
+  height: 100%; 
 }
